k8s/qa/abc-qa.yaml
# Copyright 2015 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: abc
spec:
  replicas: 3
  template:
    metadata:
      name: abc
      labels:
        app: abc
        role: abc
        env: qa
    spec:
      containers:
      - name: abc
        image: gcr.io/abc-123/abc
        resources:
          limits:
            memory: "1500Mi"
            cpu: "500m"
        imagePullPolicy: Always
        ports:
        - name: abc
          containerPort: 9090
